@@ -2,6 +2,11 @@
 
 	Release v0.05 to CPAN
 
+2003-11-17  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* lib/Astro/Coords/Fixed.pm (_hadec): Force RA to be in range 0 to
+	2 PI.
+
 2003-08-19  Tim Jenness  <t.jenness@jach.hawaii.edu>
 
 	* lib/Astro/Coords/Equatorial.pm (new): Do not instantiate an
